infra/deploy_jenkins.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: jenkins
  name: jenkins-docker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: jenkins
    spec:
      securityContext:
       fsGroup: 1000 
       runAsUser: 0 
      containers:
      - image: yosr074/jenkins_docker
        name: jenkins-docker
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /var/jenkins_home
          name: pvc-jenkins
      volumes:
      - name: pvc-jenkins
        persistentVolumeClaim:
         claimName: claim-jenkins
