infra/clusterip_jenkins.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-docker-clusterip
  labels:
    app: jenkins-service
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: jenkins
