infra/service-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
   run: nginx
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    nodePort: 31001
  selector:
    run: nginx
