infra/ingress-jenkins.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-domain
spec:
  rules:
  - host: ci.wl.consulting
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins-docker-clusterip
          servicePort: 8080
